--- a/app/resources/scss/bootstrap/icons/icons-reference.html
+++ b/app/resources/scss/bootstrap/icons/icons-reference.html
@@ -143,6 +143,10 @@
           <div class="icon icon-user"></div>
           <input type="text" readonly="readonly" value="user">
         </li>
+        <li>
+          <div class="icon icon-home"></div>
+          <input type="text" readonly="readonly" value="home">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -273,6 +277,10 @@
         <li>
           <div data-icon="K" class="icon"></div>
           <input type="text" readonly="readonly" value="K">
+        </li>
+        <li>
+          <div data-icon="d" class="icon"></div>
+          <input type="text" readonly="readonly" value="d">
         </li>
       </ul>
     </div>
