--- a/app/www/index.html
+++ b/app/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="default-src http://localhost http://192.168.68.107 data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; media-src *; img-src 'self' https://cdn.nordigen.com data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src http://localhost http://192.168.68.107 http://192.168.68.110 data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; media-src *; img-src 'self' https://cdn.nordigen.com data: content:;">
         <base href="./">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
