--- a/app/resources/scss/bootstrap/icons/icons-reference.html
+++ b/app/resources/scss/bootstrap/icons/icons-reference.html
@@ -147,6 +147,14 @@
           <div class="icon icon-home"></div>
           <input type="text" readonly="readonly" value="home">
         </li>
+        <li>
+          <div class="icon icon-male"></div>
+          <input type="text" readonly="readonly" value="male">
+        </li>
+        <li>
+          <div class="icon icon-female"></div>
+          <input type="text" readonly="readonly" value="female">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -281,6 +289,14 @@
         <li>
           <div data-icon="d" class="icon"></div>
           <input type="text" readonly="readonly" value="d">
+        </li>
+        <li>
+          <div data-icon="e" class="icon"></div>
+          <input type="text" readonly="readonly" value="e">
+        </li>
+        <li>
+          <div data-icon="f" class="icon"></div>
+          <input type="text" readonly="readonly" value="f">
         </li>
       </ul>
     </div>
